base-infra/backstage/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    istio-injection: enabled
    platform: infrastructure
