base-infra/backstage/base/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: backstage
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
